# matlab-simulink-mcp

./: .env.example  .gitignore  README.md  README_pypi.md  functions.py  logger.py  mcp_client.py  pyproject.toml  requirements.txt  small_server.py  state.py  test_server.py
core/: startup.py  state.py  tools.py
data/helpers/: cleanup.m
gui/: window.py
llm/: agent.py  client.py
logs/: log
scripts/: debug.py  debugger.py
src/: .env  .env.example  funcs.txt  main.py  pathmgr.py  project_root.py  pyproject.toml  test.py
src/config/: settings.py
src/core/: eng_manager.py  initialization.py  matlab_connection.py  old_tools.py  server.py  startup.py  state.py  tools.py
src/data/: blacklist.txt  sl_lib.data.json  sl_lib.data.pkl
src/data/helpers/: describe_system.m  workspace_summary.m
src/data/matlab_helpers/: describe_system.m  validate_script.m
src/data/wrappers/: VideoWriter.m  addpath.m  audioread.m  cd.m  copyfile.m  dir.m  dlmwrite.m  edit.m  evalin.m  exist.m  fclose.m  feval.m  fgetl.m  fileread.m  fopen.m  fread.m  fullfile.m  h5read.m  h5write.m  import.m  imread.m  imwrite.m  javaMethod.m  javaclasspath.m  loadlibrary.m  matlabroot.m  mcc.m  ncread.m  open.m  open_system.m  pcode.m  pwd.m  pyenv.m  readmatrix.m  readtable.m  realpath.m  rmpath.m  saveas.m  system.m  type.m  (+5 more)
src/llm/: agent.py
src/logs/: log
src/matlab_mcp/: __main__ .py  main.py
src/matlab_simulink_mcp/: __main__ .py  __main__.py  config.py  eng_installer.py  functions.py  log_utils.py  logutils.py  main.py  security.py  server.py  state.py
src/test/: assert_safe_path.asv  assert_safe_path_backup.m  brain.m  calculate_deceleration.m  canvas.m  delete.m  describe_system.m  elecmechsim.slx  fishy_function.m  fopen.m  get_ports_connections.m  library_map.asv  library_map.mlx  load_system.m  open_system.m  save.m  save_system.m  smol_test.py  system.m  test.m  test_chat.py  testscript2.asv  testscript2.mlx  testscript3.asv  testscript3.mlx  vsmol_test.py  wrappers.py
src/utils/: checks.py  converters.py  logger.py  security.py  type_converters.py  utils.py
test/: cleanup.m  elecmechsim.slx  elecmechsim_og.slx  library_map.asv  smol_test.py  test_chat.py
test_client/llm/: chat.py  small_client.py  tools.py
tests/: conftest.py
tests/archive/: format_simulink_model.m  server.py
tests/data/: calculateWeight.m  calculate_drag_force.m  canvas.m  elecmechsim.slx  example.m  fishy_function.m  snapshot_b64.m  testscript3.mlx
tests/llm/: agent.py  client.py  model.py
tests/test/: canvas.m  smol_test.py  snapshot_b64.m  test_chat.py  testscript.mlx  testscript2.mlx  workspace_summary.mlx
tests/unit/: test_mcp_client.py
utils/: checks.py  converters.py  utils.py
(+85 files in other folders)
