[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matlab_simulink_mcp"
version = "0.1.0"
description = "An MCP server for allowing LLMs to work with MATLAB and Simulink"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastmcp>=2.12.2",
    "platformdirs>=4.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"matlab_simulink_mcp" = ["data/*.txt", "data/*.json", "data/helpers/*.py"]

[project.scripts]
matsim-mcp = "matlab_simulink_mcp.__main__:main"