[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matlab-simulink-mcp"
version = "0.1.5"
description = "An MCP server for allowing LLMs to interact with MATLAB and Simulink"
authors = [
  { name = "Rohail"}
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = { file = "README_pypi.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastmcp>=2.12.2",
    "platformdirs>=4.4.0",
    "setuptools>=80.9.0",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"matlab_simulink_mcp" = ["data/*", "data/**/*"]

[project.scripts]
matlab_simulink_mcp = "matlab_simulink_mcp.__main__:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
token-env = "UV_PUBLISH_TOKEN"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
token-env = "UV_TEST_PUBLISH_TOKEN"
explicit = true
